--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     
 
     <div class="progress">
-        <div class="progress-bar bg-success" role="progressbar"  aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+        <div id="progress_bar" class="progress-bar bg-success" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
       </div>
 
     <!-- Scripts -->
