--- a/index.html
+++ b/index.html
@@ -7,20 +7,29 @@
     <title>Should I stay home</title>
     <link rel="shortcut icon" href="/images/home.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <p>Check the capacity.</p>
-    <div>
-        <h2>Costco</h2>
-        <button id="enter">Plus One</button>
-        <button id="leave">Less One</button>
-        <span id="showCount">0</span>
+    <!-- This is what a worker would see -->
+    <div class="member_interface">
+        <p>Check the capacity.</p>
+        <div>
+            <h2>Costco</h2>
+            <button id="enter">Plus One</button>
+            <button id="leave">Less One</button>
+            <span id="showCount">0</span>
+        </div>
+        
     </div>
-    
+    <!-- This is what a user would see -->
 
-    <div class="progress">
-        <div id="progress_bar" class="progress-bar bg-success" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-      </div>
+    <div class="user_interface">
+        <h1>Should I stay home?</h1>
+        <h2>Costco</h2>
+        <div class="progress">
+            <div id="progress_bar" class="progress-bar bg-success" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
+    </div>
 
     <!-- Scripts -->
     <script src="/js/main.js"></script>
